feat: Enhance agent capabilities with function calling, file uploads, transcription, and UI updates
- README.md: Updated project description, feature list and usage instructions to reflect agent capabilities, function calling, file uploads and transcription, and renamed the project.
- backend/Dockerfile: Changed base image to python:3.12-slim, removed the separate builder stage, and updated dependency installation approach.
- backend/app/models/chat.py: Refactored chat models by removing the max length on content, added support for file attachments and validators, and introduced new models for function calling and transcription responses.
- backend/app/routes/chat.py: Enhanced the chat endpoint to support multipart file uploads, parsed conversation history, and added new endpoints for audio transcription and retrieving available functions.
- backend/app/services/gemini_service.py: Updated Gemini integration to use the new google.genai SDK, implemented a dynamic model initialization, added support for file attachments in conversation history and function calling with loops, and integrated tool execution.
- backend/app/services/tools.py: Introduced a new file implementing various helper tools (weather, math, current time, currency conversion) and provided function declarations for integrating with the AI.
- backend/pyproject.toml: Updated dependencies (pydantic, google-genai) and Python version requirements; added author metadata.
- docker-compose.yml: Adjusted volume mounting paths and container configurations.
- frontend/next-env.d.ts: Updated comment reference to reflect new Next.js documentation.
- frontend/package.json: Upgraded dependencies including Next.js, React, and Tailwind, and removed test and format scripts adjustments.
- frontend/src/app/layout.tsx: Updated page metadata with new title, description, and author information.
- frontend/src/components/ChatConfig.tsx: Revamped the configuration panel UI with motion animations, added model selection from ava

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,17 +1,18 @@
 [project]
 name = "backend"
 version = "0.1.0"
+authors = ["Guy Maliar <guy@reachlatent.com>"]
 requires-python = ">=3.12"
 dependencies = [
     "black==23.11.0",
     "fastapi==0.104.1",
     "flake8==6.1.0",
-    "google-generativeai==0.3.2",
+    "google-genai>=1.2.0",
     "httpx==0.25.2",
     "isort==5.12.0",
     "mypy==1.7.1",
     "passlib[bcrypt]==1.7.4",
-    "pydantic==2.5.0",
+    "pydantic==2.11.7",
     "pytest==7.4.3",
     "pytest-asyncio==0.21.1",
     "pytest-cov==4.1.0",
@@ -24,5 +25,3 @@ dependencies = [
 
 [scripts]
 dev = "uvicorn:main"
-
-
