--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - DEBUG=false
     volumes:
       - ./backend:/app
-      - /app/.venv
+      - ./backend/.venv:/app/.venv
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -34,8 +34,8 @@ services:
       - NEXT_PUBLIC_APP_VERSION=1.0.0
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
+      - ./frontend/node_modules:/app/node_modules
+      - ./frontend/.next:/app/.next
     command: npm run dev
     depends_on:
       backend:
