--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "llm-chat-frontend",
   "version": "0.1.0",
   "private": true,
+  "author": "Guy Maliar <guy@reachlatent.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,46 +11,38 @@
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "format:check": "prettier --check ."
   },
   "dependencies": {
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "tailwindcss": "^3.3.0",
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "framer-motion": "^10.16.5",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.3",
+    "next": "^15.3.0",
+    "postcss": "^8",
+    "react": "^19",
+    "react-dom": "^19",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "@tailwindcss/typography": "^0.5.10"
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1"
+    "prettier-plugin-tailwindcss": "^0.5.7"
   }
 }
